tests/fsharp/typecheck/sigs/neg103.bsl

neg103.fs(14,16,14,17): parse error FS0010: Unexpected symbol '}' in expression

neg103.fs(17,18,17,19): parse error FS0010: Unexpected symbol '}' in expression. Expected 'with' or other token.

neg103.fs(20,23,20,24): parse error FS0010: Incomplete structured construct at or before this point in expression

neg103.fs(23,25,23,26): parse error FS0010: Incomplete structured construct at or before this point in expression

neg103.fs(26,28,26,29): parse error FS0010: Incomplete structured construct at or before this point in pattern

neg103.fs(29,31,29,32): parse error FS0010: Incomplete structured construct at or before this point in pattern matching

neg103.fs(33,14,33,20): parse error FS0010: Unexpected keyword 'match!' in expression

neg103.fs(32,27,32,28): parse error FS0604: Unmatched '{'

neg103.fs(35,19,35,20): parse error FS0010: Unexpected symbol '}' in definition. Expected incomplete structured construct at or before this point or other token.

neg103.fs(35,1,35,20): parse error FS0010: Incomplete structured construct at or before this point in implementation file

neg103.fs(4,17,4,18): typecheck error FS0039: The type 'T' is not defined. Maybe you want one of the following:

   AT

neg103.fs(4,17,4,18): typecheck error FS0039: The type 'T' is not defined. Maybe you want one of the following:

   AT

neg103.fs(8,9,8,30): typecheck error FS0750: This construct may only be used within computation expressions

neg103.fs(10,9,10,30): typecheck error FS0750: This construct may only be used within computation expressions

neg103.fs(20,16,20,17): typecheck error FS0001: This expression was expected to have type
    'Async<'a>'    
but here has type
    'AT'    

neg103.fs(20,9,20,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg103.fs(23,16,23,17): typecheck error FS0001: This expression was expected to have type
    'Async<'a>'    
but here has type
    'AT'    

neg103.fs(23,9,23,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg103.fs(26,16,26,17): typecheck error FS0001: This expression was expected to have type
    'Async<'a>'    
but here has type
    'AT'    

neg103.fs(26,9,26,22): typecheck error FS0025: Incomplete pattern matches on this expression.

neg103.fs(29,16,29,17): typecheck error FS0001: This expression was expected to have type
    'Async<'a>'    
but here has type
    'AT'    

neg103.fs(32,21,32,26): typecheck error FS0003: This value is not a function and cannot be applied.

neg103.fs(35,9,35,18): typecheck error FS0748: This construct may only be used within computation expressions. To return a value from an ordinary function simply write the expression without 'return'.
